Finish the first dialogue

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,56 @@
   margin-bottom: 16px;
   padding-left: 8px;
 }
+
+.grid-areas-parent {
+  display: grid;
+  grid-template-areas:
+    "area1 area1 area4 area4"
+    "area1 area1 area2 area3";
+  grid-template-rows: repeat(2, 200px);
+  grid-template-columns: repeat(4, 1fr);
+  gap: 12px;
+}
+
+.grid-areas-parent > div {
+  outline: 1px solid #fde68a46;
+  position: relative;
+  cursor: pointer;
+}
+.grid-areas-parent > div:hover {
+  outline: 2px solid #fde68a;
+}
+
+.grid-areas-parent h4 {
+  font-size: 0.8rem;
+  color: #fde68a;
+}
+
+.grid-areas-parent h2 {
+  font-size: 1.5rem;
+}
+
+.area-1 {
+  grid-area: area1;
+  background: url("/src/assets/numberPlates.jpg");
+  background-size: cover;
+  background-position: bottom;
+}
+.area-2 {
+  grid-area: area2;
+  background: url("/src/assets/registration.jpg");
+  background-size: cover;
+  background-position: bottom;
+}
+.area-3 {
+  grid-area: area3;
+  background: url("/src/assets/enforcer.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.area-4 {
+  grid-area: area4;
+  background: url("/src/assets/crime.jpg");
+  background-size: cover;
+  background-position: top;
+}
